Testing CI/CD through GitHub- Azure Pipeline webpage: d-curly-slayer.com

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title> Second Deployment </title>
 </head>
 <body>
-<h1> Probando binding certificado SSL </h1>
-<a href="https://imgflip.com/i/3j1v09"><img src="https://i.imgflip.com/3j1v09.jpg" title="made at imgflip.com" width=50% height="75%"/></a>
+<h1> Binding Certificado SSl Aprobado </h1>
+<h2> Ahora se encuentra navegando de manera segura </h2>
+
+<a> <img src="https://i.imgflip.com/3j1v09.jpg" title="No sea chepito" width=50% height="75%"/> </a>
 </body>
 </html>
