--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h1> Binding Certificado SSl Aprobado </h1>
 <h2> Ahora se encuentra navegando de manera segura </h2>
 
-<a href="https:github.com/dorianivc"><img src="https://i.imgflip.com/3j1v09.jpg" title="Repositorio de contenido de la pagina" width=50% height="75%"/></a>
+<a href="https://github.com/dorianivc"><img src="https://i.imgflip.com/3j1v09.jpg" title="Repositorio de contenido de la pagina" width=50% height="75%"/></a>
 </body>
 </html>
