--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> Second Deployment </title>
 </head>
 <body>
-<h1> Binding Certificado SSl Aprobado </h1>
+<h1> Binding Certificado SSL Aprobado </h1>
 <h2> Ahora se encuentra navegando de manera segura </h2>
 
 <a href="https://github.com/dorianivc/d-curly-slayer"><img src="https://i.imgflip.com/3j1v09.jpg" title="Repositorio de contenido de la pagina" width=50% height="75%"/></a>
